fix([Bug] : Make background inactive #5

--- a/index.html
+++ b/index.html
@@ -11,27 +11,29 @@
   </head>
 
   <body>
-    <div class="container-rules box-show">
-      <h3 class="rules-heading">Rules:</h3>
+    <div class="container-rules-overlay box-show">
+      <div class="container-rules">
+        <h3 class="rules-heading">Rules:</h3>
 
-      <p class="rules">Boxes will be blinked randomly by the computer.</p>
-      <p class="rules">Only a single box will be blinked at one level.</p>
-      <p class="rules">
-        You have to remember the pattern of blinking of boxes from the first
-        level to the current level.
-      </p>
-      <p class="rules">
-        At every level you have to click the boxes in same pattern in which they
-        blinked since first level.
-      </p>
-      <p class="rules">
-        On clicking correct pattern you will move to next level.
-      </p>
-      <p class="rules">
-        If clicked boxes in wrong pattern then game will get over.
-      </p>
-      <div class="btn-container">
-        <button type="button" class="btn-close">CLOSE</button>
+        <p class="rules">Boxes will be blinked randomly by the computer.</p>
+        <p class="rules">Only a single box will be blinked at one level.</p>
+        <p class="rules">
+          You have to remember the pattern of blinking of boxes from the first
+          level to the current level.
+        </p>
+        <p class="rules">
+          At every level you have to click the boxes in same pattern in which they
+          blinked since first level.
+        </p>
+        <p class="rules">
+          On clicking correct pattern you will move to next level.
+        </p>
+        <p class="rules">
+          If clicked boxes in wrong pattern then game will get over.
+        </p>
+        <div class="btn-container">
+          <button type="button" class="btn-close">CLOSE</button>
+        </div>
       </div>
     </div>
     <h1 id="level-title">Press any Key to Start</h1>
