--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
         <div type="button" id="blue" class="btn blue"></div>
       </div>
     </div>
-
+    
+<!--JavaScript-->
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
-    ></script>
+    >
+    </script>
     <script src="index.js"></script>
   </body>
 </html>
