center container on mobile device

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
   </head>
 
-  <body>
+  <body scroll="no">
     <div class="container-rules-overlay box-show">
       <div class="container-rules">
         <h3 class="rules-heading">Rules:</h3>
@@ -38,9 +38,10 @@
     </div>
 
     <div class="flex">
+      <div class="container">
         <h1 id="level-title">Press any Key to Start</h1>
+        <a type="button" class="btn-rules">RULES</a>
         <h2>Highest Score: <em class="highScore">0</em></h2>
-        <div class="container">
           <div class="row">
             <div type="button" id="green" class="btn green"></div>
             
@@ -51,7 +52,6 @@
             <div type="button" id="yellow" class="btn yellow"></div>
             <div type="button" id="blue" class="btn blue"></div>
           </div>
-          <a type="button" class="btn-rules">--- RULES ---</a>
         </div>
     </div>
 
