--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
       href="https://fonts.googleapis.com/css?family=Press+Start+2P"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
   </head>
 
   <body scroll="no">
+
+    <div class="toggle" id="toggle">
+      <!-- to switch between light and dark mode-->
+      <i class="far fa-sun"></i>
+    </div>
+
     <div class="container-rules-overlay box-show">
       <div class="container-rules">
         <h3 class="rules-heading">Rules:</h3>
