solved the issue  - (Buttons should not be clickable when game has not started #20)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
   </head>
+  <style>
+    #green, #red, #yellow, #blue {
+      cursor: pointer;
+    }
+  </style>
 
   <body scroll="no">
 
