Added the functionality for box closing.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <i class="far fa-sun"></i>
         </div>
 
-        <div class="container-rules-overlay box-show">
+        <div class="modal hidden">
             <div class="container-rules">
                 <h3 class="rules-heading">Rules:</h3>
 
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-
+        <div class="overlay hidden"></div>
         <div class="flex">
             <div class="container">
                 <h1 id="level-title">Press any Key to Start</h1>
